hphp/test/zend/bad/zend/class_alias_007.php
<?php

function __autoload($a) {
	class foo { }
}

class_alias('foo', 'bar', 1);

var_dump(new foo, new bar);

?>